--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -269,34 +269,13 @@ jobs:
       - name: Build App
         run: |
           make cp_assets
-          make cp_scripts
           wails build -ldflags "-X github.com/scanoss/scanoss.cc/backend/entities.AppVersion=$(git tag --sort=-version:refname | head -n 1)" --platform "windows/amd64" -webview2 download -o "${{ env.ARTIFACT_NAME_PREFIX_WINDOWS }}-windows.exe" -windowsconsole
         shell: bash
-
-      - name: Install NSIS and Build Installer
-        run: |
-          # Install Scoop
-          irm get.scoop.sh -outfile 'install.ps1'
-          .\install.ps1 -RunAsAdmin
-
-          # Add Scoop to PATH for this session
-          $env:Path = [System.Environment]::GetEnvironmentVariable("Path","User") + ";" + [System.Environment]::GetEnvironmentVariable("Path","Machine")
-
-          # Install NSIS
-          scoop bucket add extras
-          scoop install nsis
-
-          # Build installer
-          $APP_VERSION = (git tag --sort=-version:refname | Select-Object -First 1) -replace '^v', ''
-          makensis -DAPP_VERSION=$APP_VERSION build/windows/installer.nsi
-        shell: powershell
 
       - uses: actions/upload-artifact@v4
         with:
           name: artifact_w_unsigned
-          path: |
-            build/bin/${{ env.ARTIFACT_NAME_PREFIX_WINDOWS }}*.exe
-            dist/${{ env.ARTIFACT_NAME_PREFIX }}-Setup.exe
+          path: build/bin/${{ env.ARTIFACT_NAME_PREFIX_WINDOWS }}*.exe
 
   build_w_sign:
     name: "Sign with CodeSignTool"
@@ -333,48 +312,13 @@ jobs:
           file_path: ${GITHUB_WORKSPACE}/${{ env.ARTIFACT_WIN_PATH }}
           output_path: ${GITHUB_WORKSPACE}
 
-      - name: Find and Sign Windows Installer
-        id: sign-installer
-        run: |
-          # Find the installer
-          INSTALLER_PATH=$(find . -name "*-Setup.exe" -type f)
-          if [ -n "$INSTALLER_PATH" ]; then
-            echo "Found installer at: $INSTALLER_PATH"
-            mkdir -p win_installer
-            mv "$INSTALLER_PATH" win_installer/
-            echo "INSTALLER_FOUND=true" >> "$GITHUB_OUTPUT"
-            echo "INSTALLER_NAME=$(basename "$INSTALLER_PATH")" >> "$GITHUB_OUTPUT"
-          else
-            echo "No installer found"
-            echo "INSTALLER_FOUND=false" >> "$GITHUB_OUTPUT"
-          fi
-        shell: bash
-
-      - name: Sign Windows Installer with CodeSignTool
-        if: steps.sign-installer.outputs.INSTALLER_FOUND == 'true'
-        uses: sslcom/esigner-codesign@develop
-        with:
-          command: sign
-          username: ${{secrets.WINDOWS_CODE_SIGNING_TOOL_ES_USERNAME}}
-          password: ${{secrets.WINDOWS_CODE_SIGNING_TOOL_ES_PASSWORD}}
-          credential_id: ${{secrets.WINDOWS_CODE_SIGNING_TOOL_CREDENTIAL_ID}}
-          totp_secret: ${{secrets.WINDOWS_CODE_SIGNING_TOOL_ES_TOTP_SECRET}}
-          file_path: ${GITHUB_WORKSPACE}/win_installer/${{ steps.sign-installer.outputs.INSTALLER_NAME }}
-          output_path: ${GITHUB_WORKSPACE}/win_installer
-
       - name: zip files
         shell: bash
         run: |
           mkdir -p build/bin
           cd win_unsigned
-          # Create zip with exe
+          # Create zip with signed exe
           zip -j "../build/bin/${{ env.ARTIFACT_NAME_PREFIX_WINDOWS }}-win.zip" "${{ env.ARTIFACT_NAME_PREFIX_WINDOWS }}-windows.exe"
-
-          # Add installer to zip if it exists
-          if [ "${{ steps.sign-installer.outputs.INSTALLER_FOUND }}" == "true" ]; then
-            cd ../win_installer
-            zip -j "../build/bin/${{ env.ARTIFACT_NAME_PREFIX_WINDOWS }}-win.zip" "${{ steps.sign-installer.outputs.INSTALLER_NAME }}"
-          fi
 
       - uses: actions/upload-artifact@v4
         with:
