--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,9 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "run-p type-check build-only",
+    "build-only": "vite build",
+    "type-check": "vue-tsc --noEmit",
     "preview": "vite preview",
     "lint": "npx eslint src/**/*.{ts,tsx}",
     "lint:fix": "npm run lint --fix"
@@ -69,13 +71,15 @@
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "globals": "^15.9.0",
+    "npm-run-all": "^4.1.5",
     "postcss": "^8.4.41",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.6",
     "tailwindcss": "^3.4.7",
     "typescript": "^5.5.4",
     "typescript-eslint": "^8.0.1",
-    "vite": "^3.0.7"
+    "vite": "^3.0.7",
+    "vue-tsc": "^3.1.4"
   },
   "resolutions": {
     "@radix-ui/react-dismissable-layer": "^1.1.0",
