--- a/.github/workflows/scanoss.yml
+++ b/.github/workflows/scanoss.yml
@@ -8,7 +8,7 @@ on:
   workflow_dispatch:
 
 permissions:
-  contents: read
+  contents: write
   pull-requests: write
   checks: write
   actions: read
